# Highlight-to-AI

./: .gitignore  README.md  config.example.toml  pyproject.toml  start.bat  start.ps1
Docs/: architecture.md  design.md  development-plan.md
src/highlight_to_ai/: __init__.py  app.py  clipboard.py  config.py  errors.py  feedback.py  hotkey.py  input_control.py  llm.py  logging_config.py  main.py  orchestrator.py  prompt.py  tray.py
tests/: test_config_prompt.py  test_orchestrator.py
